--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-flow": "^6.23.0",
     "eslint": "^4.5.0",
     "eslint-plugin-jest": "^20.0.3",
+    "flow-bin": "^0.53.1",
     "jest": "^20.0.4",
     "npm-run-all": "^4.1.0"
   },
